# hdf5-test

./: .gitignore  CMakeLists.txt  README.md  build.sh  cache_1.cfg  job-hdf5-staging-evaluation.sh  post-process-results.py  run.sh  run_with_sbatch.sh
assets/datasets/: notes.txt
binary/: hdf5-test
sources/: main.cpp  parameters.hpp  pseudoRandom.h  test.cpp  test.h
